--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="theme-color" content="#311b92">
+	<meta name="author" content="albinvar.github.io">
+	<meta name="description" content="My portfolio" />
+	<meta name="keywords" content="Albin Varghese, Albinvar, Albin profile">
+	<meta itemprop="name" content="Albin Varghese">
+	<meta itemprop="description" content="Hi, Im Albin Varghese">
+	<meta itemprop="image" content="<%= BASE_URL %>img/me.webp">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://albinvar.github.io/">
+	<meta property="og:site_name" content="albinvar.github.io">
+	<meta property="og:title" content="Albin Varghese">
+	<meta property="og:description" content="Hi, Im Albin, Nice to meet you">
+	<meta property="og:image" content="<%= BASE_URL %>img/me.webp">
+	<meta property="og:image:alt" content>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
