--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="theme-color" content="#311b92">
-	<meta name="author" content="albinvar.github.io">
+	<meta name="author" content="albinvar.in">
 	<meta name="description" content="My portfolio" />
 	<meta name="keywords" content="Albin Varghese, Albinvar, Albin profile">
 	<meta itemprop="name" content="Albin Varghese">
